add totalBalance to saving payments

--- a/views/members/show.ejs
+++ b/views/members/show.ejs
@@ -90,7 +90,7 @@
 
 
                                     <tbody> 
-                                    <%member.payments.forEach(function(payment){%>
+                                    <%member.payments.reverse().forEach(function(payment){%>
                                     
                                   
                                     <tr>  
