--- a/views/members/new.ejs
+++ b/views/members/new.ejs
@@ -33,20 +33,28 @@
                                         <input class="form-control m-input--solid" placeholder="Firstname" type="text" name="member[firstName]">
                                         <input class="form-control m-input--solid mt-3" placeholder="Lastname" type="text" name="member[lastName]">
                                         <input type="text" class="form-control mt-3 m-input--solid" name="member[dateOfBirth]"  placeholder="Date Of Birth" id="m_datepicker_2"/>
+                                        <select class="form-control m-select2--solid m-input--solid mt-3 p-2" name="member[gender]">
+                        
+                                        <option value="none">Select Gender</option>
+                                        <option>Male</option>
+                                        <option>Female</option>
+                                       
+                                            
+                                        </select>
                                         
-                                <input class="form-control m-input--solid mt-3" placeholder="Address" type="text" name="member[address]">
+                                
                                     </div>
 
                                     <div class="col-md-6">
-                                    <input class="form-control m-input--solid" placeholder="Email Address" type="email" name="member[email]">
+                                    <input class="form-control m-input--solid" placeholder="Address" type="text" name="member[address]">
+                                    <input class="form-control m-input--solid mt-3" placeholder="Email Address" type="email" name="member[email]">
                                     <input class="form-control m-input--solid mt-3" placeholder="Occupation" type="text" name="member[occupation]">
-                                    <input class="form-control m-input--solid mt-3" min="0" placeholder="Phone Number" type="number" name="member[phoneNum]">
+                                    <input class="form-control m-input--solid mt-3" min="0" placeholder="Phone Number" type="text" name="member[phoneNum]">
                                
-                                    <button type="submit" class="btn mt-3 btn-block btn-primary">
-                        Submit
-                    </button>
+                               
                                    </div>
                                 </div>
+
 
                                 
                                       
@@ -54,6 +62,9 @@
                         <div class="m-portlet__foot m-portlet__foot--fit text-center">
                         <div class="m-form__actions row justify-content-center">
                         <div class="col-6">
+                        <button type="submit" class="btn mt-2 mb-3 btn-block btn-primary">
+                        Submit
+                    </button>
                             
                        
                     <a href="/members">Go back</a>
