--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -7,7 +7,7 @@
 		<title>
 			Localhost
 		</title>
-		<meta name="description" content="Latest updates and statistic charts">
+		<meta name="description" content="Mini microfinance web app">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<!--begin::Web font -->
