--- a/views/members/index.ejs
+++ b/views/members/index.ejs
@@ -3,13 +3,17 @@
 <% include ../partials/dashboard %>
             
             
-            
+									
+            <div class="welcome">
+            <% include ../partials/flash %>
+            </div>
             <div class="m-content">
                 <div class="row justify-content-center">
                     
                 <div class="col-md-12">
               <!--begin::Portlet-->
-						<div class="m-portlet m-portlet--tab">
+                        <div class="m-portlet m-portlet--tab">
+                       
                         <div class="m-portlet__head">
                             <div class="m-portlet__head-caption">
                                 <div class="m-portlet__head-title">
