change company name to username

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -44,7 +44,7 @@
 													<i class="socicon socicon-mail"></i>
 												</span>
 											</div>
-											<input type="text" class="form-control m-input" name="username" placeholder="Company Name" aria-describedby="basic-addon1">
+											<input type="text" class="form-control m-input" name="username" placeholder="Username" aria-describedby="basic-addon1">
 										</div>
 										
 										<div class="input-group m-input-group  m-input-group--pill ">
