--- a/views/register.ejs
+++ b/views/register.ejs
@@ -52,7 +52,7 @@
 													<i class="la la-users"></i>
 												</span>
 											</div>
-											<input type="text" class="form-control m-input" name="username" placeholder="Company Name" aria-describedby="basic-addon1">
+											<input type="text" class="form-control m-input" name="username" placeholder="Username" aria-describedby="basic-addon1">
 										</div>
 
 
