--- a/views/members/index.ejs
+++ b/views/members/index.ejs
@@ -31,7 +31,7 @@
                                 <div class="m-section__content">
                                 
                                 <a href="/members/new" class="btn btn-primary float-right">Add a new member</a>
-                                    <table class="table table-striped m-table">
+                                    <table class="table table-striped m-table  table-responsive">
                                         <thead>
                                             <tr>
                                                 <th> # </th>
