--- a/views/members/new.ejs
+++ b/views/members/new.ejs
@@ -30,9 +30,9 @@
                                 <div class="form-group m-form__group row">
                                 
                                     <div class="col-md-6">
-                                        <input class="form-control m-input--solid" placeholder="Firstname" type="text" name="member[firstName]">
-                                        <input class="form-control m-input--solid mt-3" placeholder="Lastname" type="text" name="member[lastName]">
-                                        <input type="text" class="form-control mt-3 m-input--solid" name="member[dateOfBirth]"  placeholder="Date Of Birth" id="m_datepicker_2"/>
+                                        <input class="form-control m-input--solid" placeholder="Firstname" autocomplete="off" type="text" name="member[firstName]">
+                                        <input class="form-control m-input--solid mt-3" placeholder="Lastname" autocomplete="off" type="text" name="member[lastName]">
+                                        <input type="text" class="form-control mt-3 m-input--solid" name="member[dateOfBirth]" autocomplete="off"  placeholder="Date Of Birth" id="m_datepicker_2"/>
                                         <select class="form-control m-select2--solid m-input--solid mt-3 p-2" name="member[gender]">
                         
                                         <option value="none">Select Gender</option>
@@ -46,10 +46,10 @@
                                     </div>
 
                                     <div class="col-md-6">
-                                    <input class="form-control m-input--solid" placeholder="Address" type="text" name="member[address]">
-                                    <input class="form-control m-input--solid mt-3" placeholder="Email Address" type="email" name="member[email]">
-                                    <input class="form-control m-input--solid mt-3" placeholder="Occupation" type="text" name="member[occupation]">
-                                    <input class="form-control m-input--solid mt-3" min="0" placeholder="Phone Number" type="text" name="member[phoneNum]">
+                                    <input class="form-control m-input--solid" placeholder="Address" type="text" autocomplete="off" name="member[address]">
+                                    <input class="form-control m-input--solid mt-3" placeholder="Email Address" autocomplete="off" type="email" name="member[email]">
+                                    <input class="form-control m-input--solid mt-3" placeholder="Occupation" autocomplete="off" type="text" name="member[occupation]">
+                                    <input class="form-control m-input--solid mt-3" min="0" placeholder="Phone Number" autocomplete="off" type="text" name="member[phoneNum]">
                                
                                
                                    </div>
