--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,9 +5,9 @@
 	<head>
 		<meta charset="utf-8" />
 		<title>
-			Localhost
+			#saveIT
 		</title>
-		<meta name="description" content="Mini microfinance web app">
+		<meta name="description" content="Mini microfinance web app created to automate the processes of a microfinance company and co-operative societies">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<!--begin::Web font -->
