--- a/views/payments/new.ejs
+++ b/views/payments/new.ejs
@@ -23,10 +23,10 @@
                 <div class="form-group m-form__group row justify-content-center">
                 
                
-                 <input class="form-control m-input--solid mt-3" placeholder="Amount" type="text" name="payment[amount]">
+                 <input class="form-control m-input--solid mt-3" placeholder="Amount" required type="text" name="payment[amount]">
                  
                         
-                        <select class="form-control m-select2--solid m-input--solid mt-3 p-2" name="payment[depositType]">
+                        <select class="form-control m-select2--solid m-input--solid mt-3 p-2" required name="payment[depositType]">
                         
                         <option>Cash</option>
                         <option>Cheque</option>
